--- a/PF2eApp/templates/layout.html
+++ b/PF2eApp/templates/layout.html
@@ -30,6 +30,7 @@
                     <span class="navbar-toggler-icon">close</span>
                 </button>
                 <a class="navbar-brand" href="/"><span class="blue">PF2eApp</span></a>
+                <img src="/static/d20.png" alt="D20 Die" width="40" height="40">
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session.user_id %}
                         <ul class="navbar-nav mr-auto mt-2">
