--- a/PF2eApp/templates/login.html
+++ b/PF2eApp/templates/login.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+    <h3> Log In </h3>
     <form action="/login" method="post">
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
