--- a/PF2eApp/templates/index.html
+++ b/PF2eApp/templates/index.html
@@ -1,10 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Apology
+    Homepage
 {% endblock %}
 
 {% block main %}
-    <h3>Error: {{ error }}</h3>
-    <h4>{{ message }}</h4>
+    <h1>Hello, {{ user }} world of PF</h1>
 {% endblock %}
