--- a/PF2eApp/templates/layout.html
+++ b/PF2eApp/templates/layout.html
@@ -29,8 +29,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">close</span>
                 </button>
-                <a class="navbar-brand" href="/"><span class="blue">PF2eApp</span></a>
-                <img src="/static/d20.png" alt="D20 Die" width="40" height="40">
+                <a class="navbar-brand" href="/"><span class="blue">PF2eApp <img src="/static/d20.png" alt="D20 Die" width="40" height="40"> </span></a>
+                
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session.user_id %}
                         <ul class="navbar-nav mr-auto mt-2">
