--- a/PF2eApp/templates/characters.html
+++ b/PF2eApp/templates/characters.html
@@ -6,6 +6,7 @@
 
 {% block main %}
     <a href="/editcharacter">edit</a>
+    <h1>Characters:</h1>
     {% for character in characters %}
         <a href = "/character/{{ character }}">{{Character}}</a>
     {% endfor %}
