added insert character logic

--- a/PF2eApp/templates/characters.html
+++ b/PF2eApp/templates/characters.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <a href="/editcharacter">edit</a>
+    <a href="/newcharacter">New Character</a>
     <h1>Characters:</h1>
     {% for character in characters %}
         <a href = "/character/{{ character }}">{{Character}}</a>
