--- a/PF2eApp/templates/newcharacter.html
+++ b/PF2eApp/templates/newcharacter.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <h2> Edit Character </h2>
-    <form action="/editcharacter" method="post"> 
+    <form action="/newcharacter" method="post"> 
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="name" placeholder="Name" type="text">
         </div>
