--- a/templates/newcharacter.html
+++ b/templates/newcharacter.html
@@ -31,6 +31,9 @@
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="level" placeholder="level" type="text">
         </div>
+        <div class="form-group">
+            <input autocomplete="off" autofocus class="form-control" name="backstory" placeholder="backstory" type="text">
+        </div>
         <button class="btn btn-primary" type="submit">Save</button>
     </form>
 
