implement view characters

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,8 @@
 {% endblock %}
 
 {% block main %}
-    <h1>Hello, {{ user }} world of PF</h1>
+    <h1>Hello, {{ user }}!</h1>
+    <p>Welcome to the RPG character generator.</p>
+    <p>See your characters here: <a href = "/characters"> Characters</a></p>
+    <p>Create a new character: <a href = "/newcharacter"> New Character</a></p>
 {% endblock %}
