--- a/templates/characters.html
+++ b/templates/characters.html
@@ -7,7 +7,7 @@
 {% block main %}
     <a href="/newcharacter">New Character</a>
     <h1>Characters:</h1>
-    {% for character in characters %}
-        <a href = "/character/{{ character }}">{{Character}}</a>
+    {% for character in chardata %}
+        <a href = "/character/{{ chardata.name }}">{{chardata.name}}</a>
     {% endfor %}
 {% endblock %}
