--- a/templates/newcharacter.html
+++ b/templates/newcharacter.html
@@ -11,6 +11,9 @@
             <input autocomplete="off" autofocus class="form-control" name="name" placeholder="Name" type="text">
         </div>
         <div class="form-group">
+            <input autocomplete="off" autofocus class="form-control" name="class" placeholder="Class" type="text">
+        </div>
+        <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="str" placeholder="str" type="text">
         </div>
         <div class="form-group">
