--- a/templates/newcharacter.html
+++ b/templates/newcharacter.html
@@ -8,34 +8,34 @@
     <h2> Edit Character </h2>
     <form action="/newcharacter" method="post"> 
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="name" placeholder="Name" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Name" placeholder="Name" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="class" placeholder="Class" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Class" placeholder="Class" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="str" placeholder="str" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Str" placeholder="Str" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="dex" placeholder="dex" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Dex" placeholder="Dex" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="con" placeholder="con" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Con" placeholder="Con" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="int" placeholder="int" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Int" placeholder="Int" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="wis" placeholder="wis" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Wis" placeholder="Wis" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="cha" placeholder="cha" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Cha" placeholder="Cha" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="level" placeholder="level" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Level" placeholder="Level" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="backstory" placeholder="backstory" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="Backstory" placeholder="Backstory" type="text">
         </div>
         <button class="btn btn-primary" type="submit">Save</button>
     </form>
