--- a/templates/newcharacter.html
+++ b/templates/newcharacter.html
@@ -35,7 +35,7 @@
             <input autocomplete="off" autofocus class="form-control" name="Level" placeholder="Level" type="text">
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="Backstory" placeholder="Backstory" type="text">
+            <textarea id="backstory" class="form-control" name="Backstory" placeholder="Backstory" rows="4" cols="40"></textarea>
         </div>
         <button class="btn btn-primary" type="submit">Save</button>
     </form>
