--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <title>PF2eApp: {% block title %}{% endblock %}</title>
+        {% block script %}{% endblock %}
         <!-- Icons for alerts from bootstrap -->
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
             <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
