--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,23 @@
         <!-- https://getbootstrap.com/docs/5.1/ -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <title>PF2eApp: {% block title %}{% endblock %}</title>
+        
+        <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            let current = window.location.pathname;
+            if (current == '/') {
+                current = '/home'
+            }
+            query = 'a[href=\'' + current + '\']'
+            var tab = document.querySelector(query);
+            console.log(tab)
+            console.log(query)
+            tab.className = "nav-link active";
+        });
+        </script>
+        
+        
+        <title>RPGApp: {% block title %}{% endblock %}</title>
         {% block script %}{% endblock %}
         <!-- Icons for alerts from bootstrap -->
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -39,28 +55,50 @@
         <nav class="navbar navbar-expand-md navbar-light bg-light border">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">close</span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="/"><span class="blue">PF2eApp <img src="/static/d20.png" alt="D20 Die" width="40" height="40"> </span></a>
-                
+                <a class="navbar-brand" href="/"><span class="blue">RPG App <img src="/static/d20.png" alt="D20 Die" width="40" height="40"> </span></a>
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session.user_id %}
-                        <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/characters">Characters</a></li>
-                        </ul>
-                        <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
-                        </ul>
+                    <ul class="nav nav-pills me-auto" id="navbar left">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/characters">Characters</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dice">Dice Roller</a>
+                        </li>
+                    </ul>
+                    <ul class="nav nav-pills ms-auto" id="navbar right">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Log Out</a>
+                        </li>
+                    </ul>
                     {% else %}
-                        <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/characters">Characters</a></li>
-                        </ul>
-                        <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
-                        </ul>
-                    {% endif %}
+                    <ul class="nav nav-pills me-auto" id="navbar left">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/characters">Characters</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dice">Dice Roller</a>
+                        </li>
+                    </ul>
+                    <ul class="nav nav-pills ms-auto" id="navbar right">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Log In</a>
+                        </li>
+                    </ul>
+                    {% endif %}    
                 </div>
+                
             </div>
         </nav>
 
