--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,6 @@
 {% endblock %}
 
 {% block main %}
-    <h1>Hello, {{ user }}!</h1>
-    <p>Welcome to the RPG character generator.</p>
-    <p>See your characters here: <a href = "/characters"> Characters</a></p>
-    <p>Create a new character: <a href = "/newcharacter"> New Character</a></p>
+    <h1 class="display-1">Hello, {{ user }}!</h1>
+    <h2 class="display-4">Welcome to your RPG character portfolio.</h2>
 {% endblock %}
