--- a/templates/layout.html
+++ b/templates/layout.html
@@ -117,7 +117,7 @@
         </main>
 
         <footer class="small text-center text-muted">
-            John Gelinas 2021.
+            JNG 2021.
         </footer>
 
     </body>
