--- a/templates/viewcharacter.html
+++ b/templates/viewcharacter.html
@@ -1,22 +1,30 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    {{ chardata.name }}
+{{ chardata.name }}
 {% endblock %}
 
 {% block script %}
 <!-- Allow for hiding of edit column -->
 <script>
-function editcolumn() {
-    var col = document.getElementsByClassName("editcolumn");
-    for (var i = 0; i < col.length; ++i) {
-        if (col[i].style.visibility == "visible") {
-            col[i].style.visibility = "collapse";
-        } else {
-            col[i].style.visibility = "visible";
+    document.addEventListener('DOMContentLoaded', () => {
+        var col = document.getElementsByClassName("editcolumn");
+        for (var i = 0; i < col.length; i++) {
+                col[i].style.display = "none";
+            }
+        }
+    )
+
+    function editcolumn() {
+        var col = document.getElementsByClassName("editcolumn");
+        for (var i = 0; i < col.length; i++) {
+            if (col[i].style.display == "") {
+                col[i].style.display = "none";
+            } else {
+                col[i].style.display = "";
+            }
         }
     }
-}
 </script>
 
 
@@ -24,62 +32,64 @@ function editcolumn() {
 
 {% block main %}
 
-<table class = "table table-striped table-hover table-active">
+<table class="table table-striped table-hover table-active">
     <colgroup>
         <col>
         <col>
-        <col class = "editcolumn border-0" id = "col" style = "width: 300px; visibility: hidden">
+        <col class="editcolumn border-0" id="col" style="width: 300px">
     </colgroup>
     <thead class="thead-dark">
         <tr>
             <th>Name</th>
             <th>{{ chardata["Name"] }}</th>
-            <th class = "editcolumn" style = "visibility: hidden"></th>
+            <th class="editcolumn"></th>
         </tr>
     </thead>
+    <tr>
+        <button onclick="editcolumn()" class="btn btn-secondary m-2">Show/Hide Edits</button>
+    </tr>
     {% for field in chardata %}
-        {% if loop.index > 3 and loop.index < 13 %}
-            <tr>
-                <th scope="row" style = "width: 15%">{{ field }} </th>
-                <td style = "width: 40%">
-                    {{ chardata[field]|string }}
-                    {#Add + modifiers (- are already displayed)#}
-                    {% if field|length == 3 %}
-                    (
-                        {% if chardata[[field, ' Mod']|join] > 0 %}
-                            {{ ['+',chardata[[field, ' Mod']|join]]|join }}
-                        {% else %}
-                            {{ ['',chardata[[field, ' Mod']|join]]|join }}
-                        {% endif %}
-                    )
-                    {% endif %}
-                </td>
-                <td style = "visibility: hidden" class = "editcolumn">
-                    <form action= "/character/{{chardata.Name}}" method="post">
-                        {%if field == "Backstory" %}
-                        <textarea rows="4" cols="20" id = {{field}} name = {{field}} >{{chardata[field]|string}}</textarea>
-                        {% else %}
-                        <input type = "text" id = {{field}} name = {{field}} value = "{{chardata[field]|string}}">
-                        {% endif %}
-                        <button class = "btn btn-secondary" type = "submit">Edit</button>
-                        <input type = "hidden" name = "field" value = "{{field}}">
-                    </form>
-                </td>            
-            </tr>
-        {% endif %}
+    {% if loop.index > 3 and loop.index < 13 %}
+    <tr>
+        <th scope="row" style="width: 15%">{{ field }} </th>
+        <td style="width: 40%">
+            {{ chardata[field]|string }}
+            {#Add + modifiers (- are already displayed)#}
+            {% if field|length == 3 %} (
+            {% if chardata[[field, ' Mod']|join] > 0 %}
+            {{ ['+',chardata[[field, ' Mod']|join]]|join }}
+            {% else %}
+            {{ ['',chardata[[field, ' Mod']|join]]|join }}
+            {% endif %}
+            )
+            {% endif %}
+        </td>
+        <td class="editcolumn">
+            <form action="/character/{{chardata.Name}}" method="post">
+                {%if field == "Backstory" %}
+                <textarea rows="4" cols="20" id={{field}} name={{field}}>{{chardata[field]|string}}</textarea>
+                {% else %}
+                <input type="text" id={{field}} name={{field}} value="{{chardata[field]|string}}">
+                {% endif %}
+                <button class="btn btn-secondary" type="submit">Edit</button>
+                <input type="hidden" name="field" value="{{field}}">
+            </form>
+        </td>
+    </tr>
+    {% endif %}
     {% endfor %}
     <thead>
-        <th colspan = "2" style = "text-align: center">Proficiencies</th>
+        <th colspan="2" style="text-align: center">Proficiencies</th>
+        <td class="editcolumn"></td>
     </thead>
     {% for name, prof in proficiencies.items() %}
     <tr>
         <td>{{name}}</td>
         <td>{{prof}}</td>
+        <td class="editcolumn"></td>
     </tr>
     {% endfor %}
-    <tr>
-        <button onclick="editcolumn()" class = "btn btn-secondary">Show/Hide Edits</button>
-    </tr>
+
 </table>
 
 {% endblock %}
